exports[`test should render a default component 1`] = `
<List
  className=""
  isDivided={false} />
`;

exports[`test should render with isDivided 1`] = `
<List
  className=""
  isDivided={true}>
  <type
    isSelectable={false}
    isSelected={false}
    onClick={[Function]} />
</List>
`;

exports[`test should render with items 1`] = `
<List
  className=""
  isDivided={false}>
  <type
    isSelectable={false}
    isSelected={false}
    onClick={[Function]} />
  <type
    isSelectable={false}
    isSelected={false}
    onClick={[Function]} />
  <type
    isSelectable={false}
    isSelected={false}
    onClick={[Function]} />
  <type
    isSelectable={false}
    isSelected={false}
    onClick={[Function]} />
  <type
    isSelectable={false}
    isSelected={false}
    onClick={[Function]} />
</List>
`;

exports[`test should select an item 1`] = `
<List
  className=""
  isDivided={false}>
  <ListItem
    className="stuff1"
    content={
      <p>
        text1
      </p>
    }
    hasChevron={false}
    isSelectable={true}
    isSelected={true}
    onClick={[Function]} />
  <ListItem
    className="stuff2"
    content={
      <p>
        text2
      </p>
    }
    hasChevron={false}
    isSelectable={true}
    isSelected={false}
    onClick={[Function]} />
  <ListItem
    className="stuff3"
    content={
      <p>
        text3
      </p>
    }
    hasChevron={false}
    isSelectable={true}
    isSelected={false}
    onClick={[Function]} />
  <ListItem
    className="stuff4"
    content={
      <p>
        text4
      </p>
    }
    hasChevron={false}
    isSelectable={true}
    isSelected={false}
    onClick={[Function]} />
  <ListItem
    className="stuff5"
    content={
      <p>
        text5
      </p>
    }
    hasChevron={false}
    isSelectable={true}
    isSelected={false}
    onClick={[Function]} />
</List>
`;

exports[`test should select an item 2`] = `
<List
  className=""
  isDivided={false}>
  <ListItem
    className="stuff1"
    content={
      <p>
        text1
      </p>
    }
    hasChevron={false}
    isSelectable={true}
    isSelected={true}
    onClick={[Function]} />
  <ListItem
    className="stuff2"
    content={
      <p>
        text2
      </p>
    }
    hasChevron={false}
    isSelectable={true}
    isSelected={true}
    onClick={[Function]} />
  <ListItem
    className="stuff3"
    content={
      <p>
        text3
      </p>
    }
    hasChevron={false}
    isSelectable={false}
    isSelected={false}
    onClick={[Function]} />
  <ListItem
    className="stuff4"
    content={
      <p>
        text4
      </p>
    }
    hasChevron={false}
    isSelectable={false}
    isSelected={false}
    onClick={[Function]} />
  <ListItem
    className="stuff5"
    content={
      <p>
        text5
      </p>
    }
    hasChevron={false}
    isSelectable={false}
    isSelected={false}
    onClick={[Function]} />
</List>
`;

exports[`test should select an item 3`] = `
<List
  className=""
  isDivided={false}>
  <ListItem
    className="stuff1"
    content={
      <p>
        text1
      </p>
    }
    hasChevron={false}
    isSelectable={true}
    isSelected={true}
    onClick={[Function]} />
  <ListItem
    className="stuff2"
    content={
      <p>
        text2
      </p>
    }
    hasChevron={false}
    isSelectable={true}
    isSelected={true}
    onClick={[Function]} />
  <ListItem
    className="stuff3"
    content={
      <p>
        text3
      </p>
    }
    hasChevron={false}
    isSelectable={false}
    isSelected={false}
    onClick={[Function]} />
  <ListItem
    className="stuff4"
    content={
      <p>
        text4
      </p>
    }
    hasChevron={false}
    isSelectable={false}
    isSelected={false}
    onClick={[Function]} />
  <ListItem
    className="stuff5"
    content={
      <p>
        text5
      </p>
    }
    hasChevron={false}
    isSelectable={false}
    isSelected={false}
    onClick={[Function]} />
</List>
`;

exports[`test should select an item 4`] = `
<List
  className=""
  isDivided={false}>
  <ListItem
    className="stuff1"
    content={
      <p>
        text1
      </p>
    }
    hasChevron={false}
    isSelectable={true}
    isSelected={false}
    onClick={[Function]} />
  <ListItem
    className="stuff2"
    content={
      <p>
        text2
      </p>
    }
    hasChevron={false}
    isSelectable={true}
    isSelected={true}
    onClick={[Function]} />
  <ListItem
    className="stuff3"
    content={
      <p>
        text3
      </p>
    }
    hasChevron={false}
    isSelectable={true}
    isSelected={false}
    onClick={[Function]} />
  <ListItem
    className="stuff4"
    content={
      <p>
        text4
      </p>
    }
    hasChevron={false}
    isSelectable={true}
    isSelected={false}
    onClick={[Function]} />
  <ListItem
    className="stuff5"
    content={
      <p>
        text5
      </p>
    }
    hasChevron={false}
    isSelectable={true}
    isSelected={false}
    onClick={[Function]} />
</List>
`;
